style.css
body {
	background: #eaeef8;
	font: 14px 'Montserrat';
	line-height: 1.4;
	margin: 0 0;
	margin-bottom: 100px;
}

h1 {
	font-weight: 600;
}

h2 {
	font-weight: 400;
}

h3 {
	font-weight: 400;
}

section h2, h3 {
	text-transform: uppercase;
	color: #1b4e68;
}

section h2 {
	font-weight: bold;
}

section h3 {
	margin-bottom: 0.1em;
}

a {
	color: #2C85B1;
	text-decoration: underline;
	font-weight: 400;
}

a:hover {
	color: #1b4e68;
}

#wrapper {
	border-radius: 10px;
	background: #fff;
	max-width: 80vw;
	margin: 70px auto;
	overflow: hidden;
}

#header {
	text-align: center;
	background: #ced;
	background: #5B7DA4;
	color: #fff;
	grid-area: header;
}

#mobile-details {
	grid-area: mobile-details;
	display: grid;
	grid-template-columns: repeat(2, 1fr);
}

#resume {
	display: grid;
	grid-template-areas:
		"header"
		"mobile-details"
		"content"
		"sidebar";
}

@media (min-width: 850px) {
	#mobile-details {
		display: none;
	}

	#resume {
		display: grid;
		grid-template-areas:
			"header header"
			"mobile-details mobile-details"
			"content sidebar";
	}
}

#main-content {
	grid-column: 1 / 3;
	padding: 50px;
	grid-area: content;
}

#sidebar {
	background: #7C97B6;
	grid-column: 3;
	padding: 50px;
	color: #fff;
	grid-area: sidebar;
}

#sidebar h2 {
	color: #E3B829;
}

#sidebar a {
	color: #1b4e68;
}

#sidebar a:hover {
	color: #9cafb8;
}

#sidebar .language-wrapper {
	display: grid;
	grid-template-columns: repeat(2, 1fr);
	column-gap: 20px;
	row-gap: 1em;
}

.dark-text {
	color: #1b4e68;
}

.item {
	margin: 0 0 1em;
	padding: 0 0 1em;
	border-bottom: 1px solid #F2EBEC;
}

#sidebar .language-wrapper .item {
	padding: 0 0 0 6px;
	border-left: 2px solid #F2EBEC;
	border-bottom: none;
}

.item:last-child {
	border-bottom: none;
}

.item .position {
	font-weight: 600;
	margin: 0.2em 1em 0.2em 0;
}

.item .date,
.item .start-date,
.item .end-date {
	color: #6B6B6B;
}

.item .highlights {
	list-style: square;
	font-size: 0.9em;
}
ul.keywords {
	padding: 0;
}

ul.keywords > li {
	display: inline-block;
	background-color: #1b4e68;
	padding: 4px 6px 4px 6px;
	border-radius: 4px;
}

